# constrained-albc

./: .gitignore  CHANGELOG.md  DIAGNOSIS.md  LICENSE  README.md  _e6_remap.py  pyproject.toml
.omx/profile/: analyze_training.py  encoder_adapter.py  eval_adapter.py  evaluator.sh  launch.sh  metrics.yaml  rules.md  test_constraint_margin_norm.py  test_constraint_naming.py  test_deep_plot_panels.py  test_detect_oscillation.py  test_doraemon_curriculum_plot.py  tree.yaml  tslib.py
.omx/registry/: index.md  log.md
constrained_albc/: __init__.py
constrained_albc/analysis/: _pathsetup.py  analyze.py  common.py  compare.py  dr_config.py  encoder_tools.py  eval.py  eval_dr.py  eval_plots.py  eval_serialize.py  eval_student.py  joint1_drift.py  monitor.py  ood_logic.py  paths.py  student_policy.py
constrained_albc/deploy/: __init__.py  __main__.py  _isolation.py  engine.py  golden.py  npforward.py  pack.py  report.py  spec.py  verify.py
constrained_albc/envs/: __init__.py
docs/: README.md  architecture.md  installation.md
docs/explanation/: constraint-theory.md  dr-strategies-survey.md  dynamics.md  physics-tuning.md  reward-design.md  run-id-tree-design.md  system-overview.md  tdc-control-law.md  tdc-literature.md
docs/how-to/: deploy-pack-export.md  deploy.md  domain-randomization.md  physics-tuning.md  run-on-dgx.md  sim-to-real.md
docs/reference/: action-pipeline.ko.md  action-pipeline.md  command-and-task.ko.md  command-and-task.md  constraints.ko.md  constraints.md  debug-history.md  design-history.md  domain-randomization-and-doraemon.ko.md  domain-randomization-and-doraemon.md  experiments-archive.md  experiments-index.json  exploration-and-noise.ko.md  exploration-and-noise.md  glossary.md  main-network-architecture.ko.md  main-network-architecture.md  observation-space.ko.md  observation-space.md  reward.ko.md  reward.md  rsl_rl_ppo_fork_3.1.2.py.bak  task-reference.md  teacher-campaign-plan.md
docs/tutorials/: getting-started.md
scripts/: _common.py  _sat_probe_play.py  export_deploy.py  launch_student_gru.sh  launch_student_tcn.sh  launch_students_sequential.sh  play.py  run_student_evals.sh  train.py  train_e6.py  train_student.py
scripts/analysis/: analyze.py  analyze_dr_switching.py  analyze_eval_dr.py  analyze_student_latent.py  collect_rollouts.py  common.py  compare_dr.py  compare_eval_dr.py  compare_tb_runs.py  create_wandb_dashboard.py  debug_checkpoint.py  diagnose_student_latent.py  encoder_z_sweep.py  eval_dr.py  eval_dr_fulldof.py  eval_dr_robustness.py  eval_dr_switching.py  eval_single_switch.py  eval_student.py  eval_student_dr.py  monitor.py  plot_encoder_training.py  plot_tdc_vs_r13_att.py  plot_training.py  recompute_eval_summary.py  table_eval_dr_attitude.py  train_offline_encoder.py
scripts/student/: launch_student_tcn.sh  (+1 more)
tests/: _replay_eval.py  conftest.py  test_action_smoothness_commanded.py  test_actuation_noise_cfg.py  test_attitude_only_dims.py  test_bias_ema_obs.py  test_buoy_dr.py  test_config_equivalence.py  test_constraints.py  test_current_migration.py  test_dagger_schedule.py  test_delay_buffer_behavior.py  test_doraemon.py  test_dr_config.py  test_dr_snapshot.py  test_encoder_adapter.py  test_encoder_loader.py  test_eval_adapter.py  test_eval_attitude_only_capability.py  test_eval_dr_metrics.py  test_eval_plots.py  test_eval_plots_p2.py  test_eval_serialize.py  test_failure_dr.py  test_faults.py  test_joint_actuation_noise.py  test_latency_dr_config.py  test_latency_dr_env.py  test_ood_dr.py  test_ood_gap.py  test_paths.py  test_priv_obs_bounds.py  test_recompute_metrics.py  test_rewards.py  test_ss_jitter_unified.py  test_state_dependent_std.py  test_student_eval_obs_width.py  test_tdc_controller.py  test_union_sweep_dispatch.py  test_value_optimizer_groups.py  (+1 more)
(+768 files in other folders)
