[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "constrained-albc"
version = "0.1.0"
description = "Constrained attitude-only ALBC research (ConstraintTRPO+IPO, TDC, student distillation) for Isaac Lab."
requires-python = ">=3.10"
dependencies = ["marinelab", "gymnasium", "torch", "numpy"]

[tool.setuptools.packages.find]
include = ["constrained_albc*"]

[project.entry-points."isaaclab.extensions"]
constrained_albc = "constrained_albc"

[tool.ruff]
line-length = 120
target-version = "py310"

extend-exclude = [
    "logs",
    "experiments",
    "outputs",
    "wandb",
    ".trash",
    "constrained_albc.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "C90",    # mccabe complexity
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
]

ignore = [
    "E402",   # Module level import not at top of file
    "D401",   # First line should be in imperative mood
    "RET504", # Unnecessary variable assignment before return statement
    "RET505", # Unnecessary elif after return statement
    "SIM102", # Use a single if-statement instead of nested if-statements
    "SIM103", # Return the negated condition directly
    "SIM108", # Use ternary operator instead of if-else statement
    "SIM117", # Merge with statements for context managers
    "SIM118", # Use {key} in {dict} instead of {key} in {dict}.keys()
    "UP006",  # Use 'dict' instead of 'Dict' type annotation
    "UP018",  # Unnecessary `float` call (rewrite as a literal)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["constrained_albc"]

# constrained-albc sits on isaaclab (base) + marinelab (physics/assets overlay);
# group them separately from generic third-party so overlay-vs-upstream imports
# are visually distinct (mirrors isaaclab/pyproject.toml's section split).
section-order = [
    "future",
    "standard-library",
    "third-party",
    "isaaclab",
    "isaaclab-rl",
    "isaaclab-tasks",
    "marinelab",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"isaaclab" = ["isaaclab"]
"isaaclab-rl" = ["isaaclab_rl"]
"isaaclab-tasks" = ["isaaclab_tasks"]
"marinelab" = ["marinelab"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["constrained_albc", "scripts"]
exclude = [
    "**/__pycache__",
    "**/logs",
    "**/experiments",
    "**/outputs",
    "**/wandb",
    ".git",
]

typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# isaaclab/isaaclab_rl/isaaclab_tasks/marinelab are Isaac-Sim-runtime packages,
# not pip-installed in a plain type-check environment (.claude/rules/04-isaaclab-gotchas.md).
reportMissingImports = "none"
reportMissingModuleSource = "none"
# @configclass synthesizes __init__ at runtime -- false positive without the plugin.
reportCallIssue = "none"
